force-app/main/default/objects/Finance_Codes__c/Finance_Codes__c.object-meta.xml
<CustomObject>
    <label>Finance Code</label>
    <nameField>
        <label>Finance Codes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>