force-app/main/default/objects/Finance_Codes__c/fields/Employability__c.field-meta.xml
<CustomField>
    <fullName>Employability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employability</label>
    <type>Checkbox</type>
</CustomField>