force-app/main/default/objects/Finance_Codes__c/fields/Gift_Aid__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Aid</label>
    <type>Checkbox</type>
</CustomField>