force-app/main/default/objects/Finance_Codes__c/fields/Gift_Aid_Finance_Code__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Finance_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift Aid Finance Code</label>
    <referenceTo>Finance_Codes__c</referenceTo>
    <relationshipLabel>Finance Codes</relationshipLabel>
    <relationshipName>Gift_Aid_Finance_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>