force-app/main/default/objects/Finance_Codes__c/fields/Gift_Team__c.field-meta.xml
<CustomField>
    <fullName>Gift_Team__c</fullName>
    <label>Gift Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Department</valueSetName>
    </valueSet>
</CustomField>