force-app/main/default/objects/Finance_Codes__c/fields/Income_Stream__c.field-meta.xml
<CustomField>
    <fullName>Income_Stream__c</fullName>
    <label>Income Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Income_Stream</valueSetName>
    </valueSet>
</CustomField>