force-app/main/default/objects/Finance_Codes__c/fields/Payroll_Giver__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Giver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Giver</label>
    <type>Checkbox</type>
</CustomField>