force-app/main/default/objects/Finance_Codes__c/fields/PCode__c.field-meta.xml
<CustomField>
    <fullName>PCode__c</fullName>
    <label>PCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>