force-app/main/default/objects/Finance_Codes__c/fields/PCode_Description__c.field-meta.xml
<CustomField>
    <fullName>PCode_Description__c</fullName>
    <label>PCode Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>