force-app/main/default/objects/Finance_Codes__c/fields/Restricted__c.field-meta.xml
<CustomField>
    <fullName>Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restricted</label>
    <type>Checkbox</type>
</CustomField>