force-app/main/default/objects/Finance_Codes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Income_Stream__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>